--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "expo-camera": "~12.1.2",
-    "expo-media-library": "~14.0.0",
-    "expo-sharing": "~10.1.0",
-    "expo-av": "~10.2.0"
+    "expo": "^48.0.21",
+    "expo-av": "~13.2.1",
+    "expo-camera": "~13.2.1",
+    "expo-media-library": "~15.2.3",
+    "expo-sharing": "~11.2.2",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.14",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
